--- a/.github/workflows/main-build-deploy.yml
+++ b/.github/workflows/main-build-deploy.yml
@@ -46,6 +46,6 @@ jobs:
     - run: git config --global user.email $MY_EMAIL
     - run: git config --global user.name "$MY_NAME"
     # authenticate with GitHub so we can do subsequent git operations
-    - run: git remote set-url origin https://$MY_USERNAME:${{ secrets.GH_SECRET }}@github.com/ct6502/apple2ts.git
+    - run: git remote set-url origin https://$MY_USERNAME:${{ secrets.GH_SECRET }}@github.com/vasmani/apple2ts.git
     # push the build (within the dist directory) to the gh-pages branch
     - run: npm run deploy
