--- a/.github/workflows/main-build-deploy.yml
+++ b/.github/workflows/main-build-deploy.yml
@@ -25,7 +25,7 @@ jobs:
     env:
       MY_EMAIL: 5461379+ct6502@users.noreply.github.com
       MY_NAME: Chris Torrence
-      MY_USERNAME: ct6502
+      MY_USERNAME: vasmani
     runs-on: ubuntu-latest
     strategy:
       matrix:
